overflow issue

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
   font-family: "Lato", sans-serif;
   font-weight: 700;
   color: #555;
